@@ -7,6 +7,7 @@
 * Added configuration parameter `jqassistant.analyze.exclude-constraints` taking a list of constraint ids for exclusion from analysis (e.g. if used in a referenced group provided by a plugin)
 * Deprecated `ìd` attribute for scanner plugins declared in `jqassistant-plugin.xml` descriptors
 * Added CycloneDX BOM (XML and JSON) for distributions and plugins
+* Allow ITs to use environment variables or system properties to specify configuration properties, e.g. `JQASSISTANT_STORE_URI=bolt://localhost:7687` or `-Djqassistant.store.uri=bolt://localhost:7687`
 
 == 2.2.0
 
